--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,73 @@
-theme: jekyll-theme-slate
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.# 
+title: Markus Rothe
+email: mr@markusrothe.dev
+description: >- # this means to ignore newlines until "baseurl:"
+  Description
+baseurl: "" # the subpath of your site, e.g. /blog
+url: https://markusrothe.dev # the base hostname & protocol for your site, e.g. http://example.com
+
+menu:
+    - title: 'Home'
+      url: '/'
+    - title: 'Blog'
+      url: '/blog'
+    - title: 'Categories'
+      url: '/categories'
+      type: 'categories'
+       
+owner:
+    name: Markus Rothe
+    site: www.markusrothe.dev
+    email: mr@markusrothe.dev
+    avatar: images/avatar.png
+    bio: soon (tm)
+    github: markusrothe
+
+social:
+    - title: "github"
+      url: "https://github.com/markusrothe"
+    
+background:
+
+#timezone: Europe/Berlin
+locale: de_DE    
+future: true
+highlighter: rouge
+markdown: kramdown
+sass:
+  sass_dir: _sass
+  style: compressed
+theme: neo-hpstr-jekyll-theme
+#plugins:
+#  - jekyll-feed
+
+# Amount of post to show on home page
+paginate: 5
+
+# Octopress
+# Default extensions
+post_ext: md
+page_ext: md
+# Found in _templates/
+post_layout: post
+page_layout: page
+# Format titles with titlecase?
+titlecase: true
+
+gems: [jekyll-paginate]
+
+exclude: ["LICENSE"]
