--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: mr@markusrothe.dev
 description: >- # this means to ignore newlines until "baseurl:"
   Description
 baseurl: "" # the subpath of your site, e.g. /blog
-url: https://markusrothe.dev # the base hostname & protocol for your site, e.g. http://example.com
+url: https://www.markusrothe.dev # the base hostname & protocol for your site, e.g. http://example.com
 
 menu:
     - title: 'Home'
