--- a/_config.yml
+++ b/_config.yml
@@ -51,8 +51,9 @@ markdown: kramdown
 sass:
   sass_dir: _sass
   style: compressed
-#plugins:
-#  - jekyll-feed
+plugins:
+  #- jekyll-feed
+  - jekyll-paginate
 
 # Amount of post to show on home page
 paginate: 5
