Update first post & about page

--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ owner:
     site: https://www.markusrothe.dev
     email: mr@markusrothe.dev
     avatar: images/avatar.png
-    bio: coming soon (tm)
+    bio: 
     github: markusrothe
 
 social:
