--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,7 @@
 title: Markus Rothe
 email: mr@markusrothe.dev
 description: Description
-baseurl: "" # the subpath of your site, e.g. /blog
-url: #https://www.markusrothe.dev # the base hostname & protocol for your site, e.g. http://example.com
+url: https://www.markusrothe.dev # the base hostname & protocol for your site, e.g. http://example.com
 
 # put your disqus here
 disqus_shortname:
