--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ owner:
     site: https://www.markusrothe.dev
     email: mr@markusrothe.dev
     avatar: images/avatar.png
-    bio: Markus Rothe is a full-time developer since 2015 enthusiastic about all things C++, computer graphics, emacs, clean code & software architecture / -design.
+    bio: Markus Rothe is a full-time developer since 2015, enthusiastic about all things C++, computer graphics, emacs, clean code & software architecture / -design.
     github: markusrothe
 
 social:
