--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ reCaptcha:
   siteKey                :
   secret                 :
 atom_feed:
-  path                   : # blank (default) uses feed.xml
+  path                   : "" # blank (default) uses feed.xml
 search                   : # true, false (default)
 search_full_content      : # true, false (default)
 search_provider          : # lunr (default), algolia, google
@@ -108,8 +108,8 @@ analytics:
 author:
   name             : "Markus Rothe"
   avatar           : "/images/avatar.png"
-  #bio              : ""
-  #location         : "Somewhere"
+  bio              : ""
+  #location         : ""
   email            : "mr@markusrothe.dev"
   links:  
     - label: "www.markusrothe.dev"
@@ -131,6 +131,7 @@ footer:
 include:
   - .htaccess
   - _pages
+  - _CMake_Tutorial
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
@@ -155,8 +156,7 @@ exclude:
   - Rakefile
   - README
   - tmp
-  - /docs # ignore Minimal Mistakes /docs
-  - /test # ignore Minimal Mistakes /test
+
 keep_files:
   - .git
   - .svn
@@ -194,7 +194,7 @@ sass:
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: #de-de # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins (previously gems:)
@@ -254,12 +254,10 @@ compress_html:
 
 # Collections
 #collections:
-#  FIRE:
-#    output: true
-#    permalink: /:collection/:path/
 #  CMake_Tutorial:
 #    output: true
 #    permalink: /:collection/:path/
+#    label: "CMake Tutorial"
 
 # Defaults
 defaults:
@@ -274,7 +272,6 @@ defaults:
       comments: # true
       share: #true
       related: true
-      #sidebar:
-      #  nav: "side"
-      
+      sidebar:
+        nav: "side"  
       
