--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,27 +1,16 @@
 # main links
-main:
-  #- title: "Quick-Start Guide"
-  #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  - title: "Posts by Tag"
-    url: /tags/
-  - title: "Posts by Category"
-    url: /categories/
-  - title: "FIRE"
+main:  
+  #- title: "Posts by Tag"
+  #  url: /tags/
+  #- title: "Posts by Category"
+  #  url: /categories/
+  - title: "FIRE Render Engine"
     url: https://github.com/markusrothe/FIRE
 
 # sidebar links
-#side:
-#  - title: "FIRE Rendering Engine"  
-#    children:
-#      - title: "GitHub"
-#        url: https://github.com/markusrothe/FIRE
-#  - title: "CMake Tutorial"
-#    children:
-#      - title: "Setting up a CMake Project"
-#        url: /
+side:
+  - title: "CMake Tutorial"    
+    children:
+      - title: "Projects, Libraries and Executables"
+        url: /Projects-Libraries-Executables/
+        
