--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,4 +13,6 @@ side:
     children:
       - title: "Projects, Libraries and Executables"
         url: /Projects-Libraries-Executables/
+      - title: "Static-, Shared- & Header-Only libs"
+        url: /Static-Shared-Header-Only-Libraries/
         
