Add CMake Installing post

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,4 +15,6 @@ side:
         url: /Projects-Libraries-Executables/
       - title: "Static-, Shared- & Header-Only libs"
         url: /Static-Shared-Header-Only-Libraries/
+      - title: "Installing"
+        url: /Installing/
         
