Added post about packaging with CMake

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,4 +17,6 @@ side:
         url: /Static-Shared-Header-Only-Libraries/
       - title: "Installing"
         url: /Installing/
+      - title: "Packaging"
+        url: /Packaging/
         
