--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,4 +19,5 @@ side:
         url: /Installing/
       - title: "Packaging"
         url: /Packaging/
-        
+      - title: "Testing"
+        url: /Testing/        
