--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Home"
 title_separator          : "|"
 name                     : "Markus Rothe"
 description              : "An amazing website."
-url                      : "https://github.com/markusrothe/markusrothe.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://www.markusrothe.dev" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
